--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "node ./dist/bin/migrate.js",
+    "dev": "  nodemon -r dotenv/config ./src/app.ts ./src/app.ts ",
+    "build": "tsc",
+    "start": "node ./dist/app.js"
   },
   "author": "Karver",
   "license": "ISC",
@@ -13,7 +16,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "8.7.3",
     "postgres-migrations": "^5.3.0",
     "typescript": "^4.9.5"
   },
@@ -23,6 +28,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
     "@types/pg": "^8.6.6",
     "bcryptjs": "^2.4.3",
     "nodemon": "^2.0.21"
