--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "migrate": "node ./dist/bin/migrate.js",
-    "dev": "  nodemon -r dotenv/config ./src/app.ts ./src/app.ts ",
+    "dev": "  nodemon ./src/app.ts ",
     "build": "tsc",
     "start": "node ./dist/app.js"
   },
